--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,6 @@ Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.6
 
 Package: raspberrypi-net-mods
-Architecture: armhf
+Architecture: all
 Depends: ${misc:Depends}, raspberrypi-ui-mods (>= 1.1), dhcpcd5 (>= 6.7.1)
 Description: Network configuration for the Raspberry Pi UI
