--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: raspberrypi-net-mods
 Section: net
 Priority: extra
 Maintainer: Serge Schneider <serge@raspberrypi.org>
-Build-Depends: debhelper (>= 8.0.0)
+Build-Depends: debhelper (>= 8.0.0), dh-systemd (>= 1.5)
 Standards-Version: 3.9.6
 
 Package: raspberrypi-net-mods
