--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: raspberrypi-net-mods
 Section: net
-Priority: extra
+Priority: optional
 Maintainer: Serge Schneider <serge@raspberrypi.org>
-Build-Depends: debhelper (>= 8.0.0), dh-systemd (>= 1.5)
-Standards-Version: 3.9.6
+Build-Depends: debhelper (>= 9.20160709)
+Standards-Version: 4.3.0
 
 Package: raspberrypi-net-mods
 Architecture: all
