--- a/debian/raspberrypi-net-mods.service
+++ b/debian/raspberrypi-net-mods.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Copy user wpa_supplicant.conf
-ConditionPathExistsGlob=/boot/wpa_supplicant.conf{,.txt}
+ConditionPathExists=/boot/wpa_supplicant.conf
 Before=dhcpcd.service
 After=systemd-rfkill.service
 
