Add back globbing removed in error by squash

--- a/debian/raspberrypi-net-mods.service
+++ b/debian/raspberrypi-net-mods.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Copy user wpa_supplicant.conf
-ConditionPathExists=/boot/wpa_supplicant.conf
+ConditionPathExists=/boot/wpa_supplicant.conf{,.txt}
 Before=dhcpcd.service
 After=systemd-rfkill.service
 
