--- a/debian/raspberrypi-net-mods.service
+++ b/debian/raspberrypi-net-mods.service
@@ -3,6 +3,7 @@ Description=Copy user wpa_supplicant.conf
 ConditionPathExists=/boot/wpa_supplicant.conf
 Before=dhcpcd.service
 After=systemd-rfkill.service
+Wants=systemd-rfkill.service
 
 [Service]
 Type=oneshot
