Remove systemd-rfkill persistance files in case it is not running yet

--- a/debian/raspberrypi-net-mods.service
+++ b/debian/raspberrypi-net-mods.service
@@ -9,6 +9,7 @@ Type=oneshot
 RemainAfterExit=yes
 ExecStart=/bin/mv /boot/wpa_supplicant.conf /etc/wpa_supplicant/wpa_supplicant.conf
 ExecStartPost=/bin/chmod 600 /etc/wpa_supplicant/wpa_supplicant.conf
+ExecStartPost=/bin/sh -c '/bin/rm -f /var/lib/systemd/rfkill/*.mmc*wlan'
 ExecStartPost=/usr/sbin/rfkill unblock wifi
 
 [Install]
