--- a/debian/raspberrypi-net-mods.service
+++ b/debian/raspberrypi-net-mods.service
@@ -1,16 +1,13 @@
 [Unit]
 Description=Copy user wpa_supplicant.conf
 ConditionPathExists=/boot/wpa_supplicant.conf
-Before=dhcpcd.service
+Before=dhcpcd.service NetworkManager.service
 After=systemd-rfkill.service
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/bin/mv /boot/wpa_supplicant.conf /etc/wpa_supplicant/wpa_supplicant.conf
-ExecStartPost=/bin/chmod 600 /etc/wpa_supplicant/wpa_supplicant.conf
-ExecStartPost=/bin/sh -c '/bin/rm -f /var/lib/systemd/rfkill/*.mmc*wlan'
-ExecStartPost=/usr/sbin/rfkill unblock wifi
+ExecStart=/usr/lib/raspberrypi-net-mods/wpa_copy
 
 [Install]
 WantedBy=multi-user.target
