debian/control: remove unneeded dependency on network-manager.
It was added in 8021bb1386a7bf2e8f8c5c95e97a51bce9f40b72 as an
alternative to dhcpcd5, but when dhcpcd5 was removed in 1a37b2b288cffefc3a7dd3bd512f4a070c59110c
network-manager was left there.

Fixes removing network-manager without uninstalling raspberrypi-net-mods
too.

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,5 @@ Standards-Version: 4.3.0
 
 Package: raspberrypi-net-mods
 Architecture: all
-Depends: ${misc:Depends}, network-manager,
- raspi-config (>= 20220804)
+Depends: ${misc:Depends}, raspi-config (>= 20220804)
 Description: Network configuration for the Raspberry Pi UI
